Revert "Изменение аватарок как в старом ВК"

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -187,8 +187,6 @@
 "version_incompatibility" = "Не удалось отобразить это вложение. Возможно, база данных несовместима с текущей версией OpenVK.";
 "graffiti" = "Граффити";
 "reply" = "Ответить";
-"updated_photo_m" = "обновил фотографию на странице";
-"updated_photo_f" = "обновила фотографию на странице";
 
 /* Friends */
 
@@ -312,7 +310,6 @@
 "search_group" = "Поиск группы";
 "search_by_groups" = "Поиск по группам";
 "search_group_desc" = "Здесь Вы можете просмотреть существующие группы и выбрать группу себе по вкусу...";
-"add_photo" = "Загрузить фотографию";
 
 /* Albums */
 
@@ -337,20 +334,6 @@
 "albums_list_few" = "У Вас $1 альбома";
 "albums_list_many" = "У Вас $1 альбомов";
 "albums_list_other" = "У Вас $1 альбомов";
-
-"new_photo" = "Загрузка новой фотографии";
-"real_photo" = "Друзьям будет проще узнать Вас, если вы загрузите свою настоящую фотографию.";
-
-"formats" = "Вы можете загрузить изображение в формате JPG, GIF или PNG.";
-"upload_problems" = "Если у Вас возникают проблемы с загрузкой, попробуйте выбрать фотографию меньшего размера.";
-"webcam_avatar" = "Если Ваш компьютер оснащён веб-камерой, Вы можете сделать моментальную фотографию »";
-
-"select_file" = "Выбрать файл";
-"delete_photo" = "Вы уверены, что хотите удалить фотографию?";
-
-"change_miniature" = "Изменить миниатюру";
-"good_photo" = "Хорошее фото сделает Ваше сообщество более узнаваемым.";
-"leave_photo" = "Оставить пост на стене";
 
 /* Notes */
 
@@ -922,6 +905,7 @@
 "error_upload_failed" = "Не удалось загрузить фото";
 "error_old_password" = "Старый пароль не совпадает";
 "error_new_password" = "Новые пароли не совпадает";
+"error_weak_password" = "Ненадёжный пароль. Пароль должен содержать не менее 8 символов, цифры, прописные и строчные буквы";
 "error_shorturl_incorrect" = "Короткий адрес имеет некорректный формат.";
 "error_repost_fail" = "Не удалось поделиться записью";
 "error_data_too_big" = "Аттрибут '$1' не может быть длиннее $2 $3";
@@ -1098,7 +1082,7 @@
 "close" = "Закрыть";
 "warning" = "Внимание";
 "question_confirm" = "Это действие нельзя отменить. Вы действительно уверены в том что хотите сделать?";
-"prevention" = "Предупреждение";
+
 /* User alerts */
 
 "user_alert_scam" = "На этот аккаунт много жаловались в связи с мошенничеством. Пожалуйста, будьте осторожны, особенно если у вас попросят денег.";
