Fix link to terms in locales (#850)

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -15,7 +15,7 @@
 "password" = "Пароль";
 "registration" = "Регистрация";
 "forgot_password" = "Забыли пароль?";
-"checkbox_in_registration" = "Я согласен с <a href='/privacy'>политикой конфиденциальности</a> и <a href='/about'>правилами сайта</a>";
+"checkbox_in_registration" = "Я согласен с <a href='/privacy'>политикой конфиденциальности</a> и <a href='/terms'>правилами сайта</a>";
 "checkbox_in_registration_unchecked" = "Вы должны согласиться с политикой конфиденциальности и правилами, чтобы зарегистрироваться.";
 "login_failed" = "Не удалось войти";
 "invalid_username_or_password" = "Неверное имя пользователя или пароль. <a href='/restore'>Забыли пароль?</a>";
@@ -1182,7 +1182,7 @@
 "tour_section_1_text_1" = "Регистрация аккаунта является самым первым и основным этапом в начале вашего пути на данном сайте.";
 "tour_section_1_text_2" = "Для регистрации вам потребуется ввести имя, E-mail и пароль.";
 "tour_section_1_text_3" = "<b>Помните:</b> Ваш E-mail будет использоваться в качестве логина для входа на сайт. Также вы имеете полное право не указывать фамилию при регистрации. В случае утери пароля для входа на сайт, воспользуйтесь разделом <a href='/restore'>восстановления</a>";
-"tour_section_1_bottom_text_1" = "Регистрируясь на сайте, вы соглашаетесь с <a href='/about'>правилами сайта</a> и <a href='/privacy'>политикой конфиденциальности</a>";
+"tour_section_1_bottom_text_1" = "Регистрируясь на сайте, вы соглашаетесь с <a href='/terms'>правилами сайта</a> и <a href='/privacy'>политикой конфиденциальности</a>";
 
 
 "tour_section_2_title_1" = "Ваш профиль";
