Add "Rules" link in page footer

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -414,6 +414,7 @@
 "left_menu_donate" = "Donate";
 
 "footer_about_instance" = "about instance";
+"footer_rules" = "rules";
 "footer_blog" = "blog";
 "footer_help" = "help";
 "footer_developers" = "developers";
