--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -338,7 +338,7 @@
 "albums_list_many" = "У Вас $1 альбомов";
 "albums_list_other" = "У Вас $1 альбомов";
 
-"new_photo" = "Загрузка новой фотографии";
+"new_photo" = "Загрузить новую фотографии";
 "real_photo" = "Друзьям будет проще узнать Вас, если вы загрузите свою настоящую фотографию.";
 
 "formats" = "Вы можете загрузить изображение в формате JPG, GIF или PNG.";
