--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -335,6 +335,30 @@
 "albums_list_many" = "У Вас $1 альбомов";
 "albums_list_other" = "У Вас $1 альбомов";
 
+"add_image" = "Поставить изображение";
+"add_image_group" = "Загрузить фотографию";
+"upload_new_picture" = "Загрузить новую фотографию";
+"uploading_new_image" = "Загрузка новой фотографии";
+"friends_avatar" = "Друзьям будет проще узнать Вас, если вы загрузите свою настоящую фотографию.";
+"groups_avatar" = "Хорошее фото сделает Ваше сообщество более узнаваемым.";
+"formats_avatar" = "Вы можете загрузить изображение в формате JPG, GIF или PNG.";
+"troubles_avatar" = "Если возникают проблемы с загрузкой, попробуйте выбрать фотографию меньшего размера.";
+"webcam_avatar" = "Если ваш компьютер оснащён веб-камерой, Вы можете <a href='javascript:'>сделать моментальную фотографию »</a>";
+
+"update_avatar_notification" = "Фотография профиля обновлена";
+"update_avatar_description" = "Нажмите сюда, чтобы перейти к просмотру";
+
+"deleting_avatar" = "Удаление фотографии";
+"deleting_avatar_sure" = "Вы действительно хотите удалить аватар?";
+
+"deleted_avatar_notification" = "Фотография успешно удалена";
+
+"save_changes" = "Сохранить изменения";
+
+"upd_m" = "обновил фотографию на своей странице";
+"upd_f" = "обновила фотографию на своей странице";
+"upd_g" = "обновило фотографию группы";
+
 /* Notes */
 
 "notes" = "Заметки";
