English: Tour: Minor fixes
Grammar stufffffffffffffffffffffffffffff

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -1264,7 +1264,7 @@
 
 "tour_title" = "Site Tour";
 "reg_title" = "Registration";
-"ifnotlike_title" = " &quot;If I don't liked this site?&quot; ";
+"ifnotlike_title" = " &quot;And what if I don't like this site?&quot; ";
 "tour_promo" = "About what awaits you after registration";
 
 "reg_text" = "<a href='/reg'>Registering</a> an account is absolutely free and takes no more than two minutes";
@@ -1370,14 +1370,14 @@
 
 
 "tour_section_10_title_1" = "Oops";
-"tour_section_10_text_1" = "I would be very happy to do a tutorial on this section, but the section is still under development. For now, we'll skip this section of the tutorial and move on...";
+"tour_section_10_text_1" = "I would be very happy to do a tutorial on this section, but it's still under development. For now, let's skip it and move on...";
 
 
 "tour_section_11_title_1" = "Themes";
-"tour_section_11_text_1" = "After registering, you will have a standard theme installed as your appearance";
-"tour_section_11_text_2" = "Some new users may be a bit intimidated by the current stock theme, which reeks of quite antiquity";
-"tour_section_11_text_3" = "<b>But no worries:</b> You can create your own theme for the site by reading <a href='https://docs.openvk.uk/'>documentation</a> or choose an existing one from the catalog";
-"tour_section_11_bottom_text_1" = "A catalog of themes is available under &quot;My Settings&quot; in the &quot;Interface&quot; tab;";
+"tour_section_11_text_1" = "After registering, you will have the default theme installed as your appearance";
+"tour_section_11_text_2" = "Some new users may be a bit intimidated by the current default theme, which reeks of quite antiquity";
+"tour_section_11_text_3" = "<b>But no worries:</b> You can create your own theme for the site by reading the <a href='https://docs.openvk.uk/'>documentation</a> or choose an existing one from the catalog";
+"tour_section_11_bottom_text_1" = "A catalog of themes is available under &quot;My Settings&quot;, in the &quot;Interface&quot; tab;";
 "tour_section_11_wordart" = "<img src='https://openvk.uk/assets/packages/static/openvk/img/tour/wordart_en.png' width='65%'>";
 
 "tour_section_12_title_1" = "Profile and group backgrounds";
