Small improvements no.2
Поиск теперь нормально выглядит на других темах
При поиске по группам отображается количество участников там
Костыль с пропуском постов возвращён но немного изменён
Добавлен костыль к комментариям чтобы не показывались комменты с удалённых постов и не было бага как в вепуровке
Добавлены ключи в советском и имперском языке для моих прошлых пуллов (ну и этого конечно)

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -1507,3 +1507,6 @@
 
 "s_any" = "any";
 "reset" = "Reset";
+
+"closed_group_post" = "This is a post from private group";
+"deleted_target_comment" = "This comment belongs to deleted post";
