--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1401,3 +1401,6 @@
 
 "s_any" = "любой";
 "reset" = "Сброс";
+
+"closed_group_post" = "Эта запись из закрытой группы";
+"deleted_target_comment" = "Этот комментарий принадлежит к удалённой записи";
