L10n: Ukrainian: Add missing strings

--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -159,6 +159,9 @@
 "pinned" = "прикріплено";
 "comments_tip" = "Будьте першим, хто залишить коментар!";
 "your_comment" = "Ваш коментар";
+"auditory" = "Аудиторія";
+"in_wall" = "на стіну";
+"in_group" = "у групу";
 "shown" = "Показано";
 "x_out_of" = "$1 з";
 "wall_zero" = "немає записів";
