--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -1099,6 +1099,7 @@
 /* User alerts */
 
 "user_alert_scam" = "На цей акаунт багато скаржилися у зв'язку з шахрайством. Будь ласка, будьте обережні, особливо якщо у вас попросять грошей.";
+"user_may_not_reply" = "Цей користувач, ймовірно, не зможе відповісти Вам через Ваші налаштування приватності. <a href='/settings?act=privacy'>Відкрити налаштування приватності</a>";
 
 /* Cookies pop-up */
 
