--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -176,8 +176,8 @@
 "all_news" = "Усі новини";
 "posts_per_page" = "Кількість записів на сторінці";
 "attachment" = "Вкладення";
-"post_as_group" = "Від імені суспільства";
-"comment_as_group" = "Від імені суспільства";
+"post_as_group" = "Від імені спільноти";
+"comment_as_group" = "Від імені спільноти";
 "add_signature" = "Підпис автора";
 "contains_nsfw" = "Містить NSFW-контент";
 "nsfw_warning" = "Даний запис може містити контент 18+";
@@ -340,6 +340,30 @@
 "albums_list_few" = "У Вас $1 альбому";
 "albums_list_many" = "У Вас $1 альбомів";
 "albums_list_other" = "У Вас $1 альбомів";
+
+"add_image" = "Встановити зображення";
+"add_image_group" = "Завантажити фотографію";
+"upload_new_picture" = "Завантажити нову фотографію";
+"uploading_new_image" = "Завантаження нової фотографії";
+"friends_avatar" = "Друзям буде простіше дізнатися Вас, якщо ви завантажите своє справжнє фото.";
+"groups_avatar" = "Гарне фото зробить Вашу спільноту більш популярним.";
+"formats_avatar" = "Ви можете завантажити зображення у форматі JPG, GIF або PNG.";
+"troubles_avatar" = "Якщо виникають проблеми із завантаженням, спробуйте вибрати фотографію меншого розміру.";
+"webcam_avatar" = "Якщо ваш комп'ютер оснащений веб-камерою, Ви можете <a href='javascript:'>зробити миттєву фотографію»</a>";
+
+"update_avatar_notification" = "Фотографію профілю оновлено";
+"update_avatar_description" = "Натисніть, щоб перейти до перегляду";
+
+"deleting_avatar" = "Видалення фотографії";
+"deleting_avatar_sure" = "Ви дійсно хочете видалити аватар?";
+
+"deleted_avatar_notification" = "Фотографію успішно видалено";
+
+"save_changes" = "Зберегти зміни";
+
+"upd_m" = "оновив фотографію на своїй сторінці";
+"upd_f" = "оновила фотографію на своїй сторінці";
+"upd_g" = "оновило фотографію групи";
 
 /* Notes */
 
@@ -918,6 +942,7 @@
 "error_upload_failed" = "Не вдалося завантажити фотографію";
 "error_old_password" = "Старий пароль не збігається";
 "error_new_password" = "Нові паролі не збігаються";
+"error_weak_password" = "Ненадійний пароль. Пароль має містити принаймні 8 символів: цифри, великі та малі літери";
 "error_shorturl_incorrect" = "Коротка адреса має неправильний формат.";
 "error_repost_fail" = "Не вдалося поділитися записом";
 "error_data_too_big" = "Атрибут '$1' не може бути довше $2 $3";
@@ -1082,7 +1107,7 @@
 "about_wall_posts_few" = "<b>$1</b> записи на стінах";
 "about_wall_posts_many" = "<b>$1</b> записів на стінах";
 "about_wall_posts_other" = "<b>$1</b> записів на стінах";
-"about_watch_rules" = "Дивіться <a href='$1'>тут</a>.";
+"about_watch_rules" = "Перегляньте <a href='$1'>тут</a>.";
 
 /* Dialogs */
 
