locales: Kazakh: Fix some translations
һһһһһһһһһһ

--- a/locales/kk.strings
+++ b/locales/kk.strings
@@ -815,7 +815,7 @@
 "topics_other" = "$1 тақырып";
 "created" = "Басталған күні";
 "everyone_can_create_topics" = "Әрбір адам тақырып бастай алады";
-"display_list_of_topics_above_wall" = "Тақырыптар тізімін жаңалықтар қабырғасынан бұрын көрсету";
+"display_list_of_topics_above_wall" = "Тақырыптар бөлімін жаңалықтардан жоғары көрсету";
 "topic_changes_saved_comment" = "Жаңартылған аты мен оның баптаулары тақырыптың бетінде пайда болады.";
 "failed_to_create_topic" = "Тақырыпты бастай алмадық";
 "failed_to_change_topic" = "Тақырыпты өзгерте алмадық";
@@ -993,14 +993,14 @@
 /* Dialogs */
 
 "ok" = "ОК";
-"yes" = "Ия";
+"yes" = "Иә";
 "no" = "Жоқ";
-"cancel" = "Бас тарту";
+"cancel" = "Керек емес";
 "edit_action" = "Өзгерту";
 "transfer" = "Аудару";
 "close" = "Жабу";
 "warning" = "Назар аударыңыз";
-"question_confirm" = "Бұл әрекетті болдырмауға мүмкін емес. Шынымен орындағыңыз келе ме?";
+"question_confirm" = "Бұл әрекетті қайтаруға мүмкін емес. Бәрібір орындағыңыз келе ме?";
 
 /* User alerts */
 
@@ -1069,8 +1069,8 @@
 "menu_support" = "Жәрдем";
 "backdrop_short" = "Артқы жағы";
 "backdrop" = "Парақшаның артқы жағы";
-"backdrop_save" = "Сурет(терді) сақтау";
-"backdrop_remove" = "Барлық суреттерді жою";
+"backdrop_save" = "Сурет(тер)ді сақтау";
+"backdrop_remove" = "Суреттерді жою";
 "backdrop_error_title" = "Суреттерді сақтау кезінде қателікке тап болдық";
 "backdrop_error_no_media" = "Суреттер бүлінген немесе толығымен жүктеп салынбаған";
 "backdrop_succ" = "Парақшаның артқы жағының баптаулары сақталды";
