Add translation of Search

--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -82,6 +82,7 @@
 "no_information_provided" = "Інформація відсутня.";
 "deceased_person" = "Сторінка покійної людини";
 "none" = "відсутній";
+"desc_none" = "немає опису";
 "send" = "Відправити";
 "years_zero" = "0 років";
 "years_one" = "1 рік";
@@ -454,7 +455,12 @@
 "round avatars" = "Круглі";
 "apply_style_for_this_device" = "Застосувати стиль лише для цього пристрою";
 "search_for_groups" = "Пошук груп";
-"search_for_people" = "Пошук людей";
+"search_for_users" = "Пошук користувачів";
+"search_for_posts" = "Пошук дописів";
+"search_for_comments" = "Пошук коментарів";
+"search_for_videos" = "Пошук відео";
+"search_for_apps" = "Пошук додатків";
+"search_for_notes" = "Пошук нотаток";
 "search_button" = "Знайти";
 "search_placeholder" = "Почніть вводити будь-яке ім'я, назву чи слово";
 "results_zero" = "Жодного результату";
@@ -1348,11 +1354,11 @@
 "tour_section_13_text_4" = "<b>Пам'ятайте: </b>Усі ваучери мають обмежений термін активації";
 "tour_section_13_bottom_text_1" = "Ваучери складаються з 24 цифр та літер";
 "tour_section_13_bottom_text_2" = "Активація пройшла вдало (наприклад, нам зарахували 100 голосів)";
-"tour_section_13_bottom_text_3" = "<b>Увага: </b>Після активації ваучера на вашу сторінку, той самий ваучер не можна буде активувати повторно";
+"tour_section_13_bottom_text_3" = "<b>Зверніть увагу: </b>Якщо ви вже активували ваучер на цьому аккаунті, його не можна повторно використати.";
 
 "tour_section_14_title_1" = "Мобільна версія";
 "tour_section_14_text_1" = "Наразі мобільної вебверсії сайту поки що немає, проте є мобільний додаток для Android";
-"tour_section_14_text_2" = "OpenVK Legacy - це мобільний додаток OpenVK для пристроїв на базі Android із дизайном ВКонтакте 3.0.4 2013 року";
+"tour_section_14_text_2" = "OpenVK Legacy - це мобільний додаток OpenVK для пристроїв на базі Android із дизайном ВКонтакті 3.0.4 2013 року";
 "tour_section_14_text_3" = "Мінімально підтримуваною версією є Android 2.1 Eclair, тобто апарати часів початку 2010-их стануть у пригоді.";
 
 "tour_section_14_title_2" = "Де це можна завантажити?";
@@ -1363,3 +1369,48 @@
 "tour_section_14_bottom_text_1" = "Скріншоти застосунку";
 "tour_section_14_bottom_text_2" = "На цьому екскурсія сайтом завершена. Якщо ви хочете спробувати наш мобільний застосунок, створити тут свою групу, покликати своїх друзів чи знайти нових, або взагалі просто якось розважитися, то це можна зробити просто зараз, пройшовши невелику <a href='/reg'>реєстрацію</a>";
 "tour_section_14_bottom_text_3" = "На цьому екскурсія сайтом завершена.";
+
+/* Search */
+
+"s_people" = "Люди";
+"s_groups" = "Спільноти";
+"s_events" = "Події";
+"s_apps" = "Застосунки";
+"s_questions" = "Запитання";
+"s_notes" = "Нотатки";
+"s_themes" = "Теми";
+"s_posts" = "Дописи";
+"s_comments" = "Коментарі";
+"s_videos" = "Відео";
+"s_audios" = "Музика";
+"s_by_people" = "по людям";
+"s_by_groups" = "по спільнотах";
+"s_by_posts" = "по дописах";
+"s_by_comments" = "по коментарях";
+"s_by_videos" = "по відео";
+"s_by_apps" = "по застосункам";
+"s_by_audios" = "по музиці";
+
+"s_order_by" = "Сортувати за...";
+
+"s_order_by_id" = "ID";
+"s_order_by_name" = "Назвою";
+"s_order_by_random" = "Випадковістю";
+"s_order_by_rating" = "Рейтингом";
+"s_order_invert" = "Інвертувати";
+
+"s_by_date" = "За датою";
+"s_date_before" = "Зареєстровано до";
+"s_date_after" = "Після";
+
+"s_main" = "Основне";
+
+"s_now_on_site" = "зараз на сайті";
+"s_with_photo" = "з фото";
+"s_only_in_names" = "тільки в іменах";
+
+"s_any" = "будь-який";
+"reset" = "Очистити";
+
+"closed_group_post" = "Цей допис з приватної групи";
+"deleted_target_comment" = "Цей коментар належить до видаленого допису";
