Fixed typo and stupid translation

--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -47,7 +47,7 @@
 "register_referer_meta_title" = "$1 запрошує вас у $2!";
 "register_referer_meta_desc" = "Приєднуйтесь до $1 та багатьох інших користувачів у $2!";
 "registration_welcome_1" = "- універсальний засіб пошуку колег, засноване на структурі ВКонтакте.";
-"registration_welcome_2" = "Ми бажаємо, щоб друзі, однокурсники, однокласники, сусіди і колеги завжди могли бути в контакті.";
+"registration_welcome_2" = "Ми бажаємо, щоб друзі, однокурсники, однокласники, сусіди та колеги завжди могли бути в контакті.";
 "users" = "Користувачі";
 "other_fields" = "Інше";
 
@@ -845,7 +845,7 @@
 "banned_2" = "Привід: <b>$1</b>.";
 "banned_perm" = "На цей раз, Ви заблоковані назавжди.";
 "banned_until_time" = "На цей раз, Ви заблоковані до <b>$1</b>";
-"banned_3" = "Ви все ще можете <a href=\"/support?act=new\">написати в службу підтримки</a>, якщо вважаєте, що сталася помилка або <a href=\"/logout?hash= $1\">вийти</a>.";
+"banned_3" = "Ви все ще можете <a href=\"/support?act=new\">написати в службу підтримки</a>, якщо вважаєте що сталася помилка або <a href=\"/logout?hash= $1\">вийти</a>.";
 "banned_unban_myself" = "Розблокувати сторінку";
 "banned_unban_title" = "Ваш обліковий запис розблокований";
 "banned_unban_description" = "Намагайтеся, більше не порушувати правила.";
@@ -1172,8 +1172,8 @@
 
 "global_maintenance" = "Технічні роботи";
 "section_maintenance" = "Розділ недоступний";
-"undergoing_global_maintenance" = "На жаль, зараз інстанція закрита на технічні роботи. Ми вже працюємо над усуненням неполадок. Будь ласка, спробуйте зайти пізніше.";
-"undergoing_section_maintenance" = "На жаль, розділ <b>$1</b> тимчасово недоступний. Ми вже працюємо над усуненням неполадок. Будь ласка, спробуйте зайти пізніше.";
+"undergoing_global_maintenance" = "Інстанція закрита на технічні роботи. Будь ласка, спробуйте зайти пізніше.";
+"undergoing_section_maintenance" = "Розділ <b>$1</b> тимчасово недоступний. Будь ласка, спробуйте зайти пізніше.";
 "topics" = "Теми";
 
 /* Polls */
@@ -1265,11 +1265,11 @@
 "tour_section_2_text_2_2" = "Ви маєте змогу закрити доступ до своєї сторінки від пошукових систем і незареєстрованих користувачів.";
 "tour_section_2_text_2_3" = "<b>Пам'ятайте:</b> у майбутньому налаштування приватності будуть розширюватися.";
 "tour_section_2_title_3" = "Персональна адреса сторінки";
-"tour_section_2_text_3_1" = "Після реєстрації сторінки, вам видається персональний ID типу: <b>/id12345</b>";
+"tour_section_2_text_3_1" = "Після реєстрації сторінки, вам видається персональний ID типа: <b>/id12345</b>";
 "tour_section_2_text_3_2" = "<b>Стандартний ID</b>, який був отриманий після реєстрації, <b>змінити не можна!</b>";
 "tour_section_2_text_3_3" = "Однак, в налаштуваннях своєї сторінки ви зможете прив'язати свою персональну адресу і цю адресу <b>можна буде змінити</b> в будь-який час";
 "tour_section_2_text_3_4" = "<b>Порада:</b> Можна займати будь-яку вільну адресу, довжина якої не менша за 5 символів.";
-"tour_section_2_bottom_text_2" = "<i>Підтримується встановлення будь-якої короткої адреси з латинських маленьких літер; адреса може містити цифри (однак, не на початку), крапки та нижні підкреслення (не на початку або наприкінці)</i>";
+"tour_section_2_bottom_text_2" = "<i>Коротка адреса може складатися лише з латинських маленьких літер (a-z), цифр, крапок та нижніх підкреслень (але </i><b>не</b><i> напочатку чи кінці)</i>";
 "tour_section_2_title_4" = "Стіна";
 
 "tour_section_3_title_1" = "Діліться своїми фотографіями";
@@ -1293,7 +1293,7 @@
 "tour_section_5_text_3" = "Окрім завантаження відео напряму, сайт підтримує і вбудовані відео через YouTube";
 
 "tour_section_6_title_1" = "Аудіозаписи";
-"tour_section_6_text_1" = "!!! АУДІОЗАПИСІВ НЕМАЄ, ЧЕКАЙТЕ ІНФОРМАЦІЇ ВІД ГЕН.ШТАБУ !!!";
+"tour_section_6_text_1" = "Аудіозаписи в розробці, стежте за новинами";
 
 "tour_section_7_title_1" = "Слідкуйте за тим, що пишуть ваші друзі";
 "tour_section_7_text_1" = "Розділ &quot;Мої Новини&quot; поділяється на два типи: локальна стрічка та глобальна стрічка новин";
@@ -1338,14 +1338,14 @@
 "tour_section_12_text_3_1" = "За потреби, ви можете приховати непотрібні розділи сайту";
 "tour_section_12_text_3_2" = "<b>Нагадування: </b>Розділи першої необхідності (Моя Сторінка; Мої Друзі; Мої Відповіді; Мої Налаштування) приховати не можна";
 "tour_section_12_title_4" = "Вид постів";
-"tour_section_12_text_4_1" = "Якщо набрид старий дизайн стіни, який був у колись популярному оригінальному ВКонтактє.сру, то ви завжди можете змінити вигляд постів на Мікроблог";
+"tour_section_12_text_4_1" = "Якщо набрид старий дизайн стіни, який був у колись популярному оригінальному ВКонтакті, то ви завжди можете змінити вигляд постів на Мікроблог";
 "tour_section_12_text_4_2" = "Вид постів можна змінювати між двома варіантами в будь-який час";
 "tour_section_12_text_4_3" = "<b>Зверніть увагу</b>, що якщо обрано старий вид відображення постів, то останні коментарі довантажуватися не будуть";
 "tour_section_12_bottom_text_1" = "Сторінка встановлення фону";
 "tour_section_12_bottom_text_2" = "Приклади сторінок зі встановленим фоном";
 "tour_section_12_bottom_text_3" = "За допомогою цієї можливості ви можете додати своєму профілю більше індивідуальності";
 "tour_section_12_bottom_text_4" = "Старий вигляд постів";
-"tour_section_12_bottom_text_5" = "Мікроблок";
+"tour_section_12_bottom_text_5" = "Мікроблог";
 
 "tour_section_13_title_1" = "Ваучер";
 "tour_section_13_text_1" = "Ваучер в OpenVK це щось на кшталт промокоду на додавання будь-якої валюти (відсотки рейтингу, голосів тощо)";
