New localization strings for OpenVK Mobile web theme

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -405,10 +405,20 @@
 "my_settings" = "Мои Настройки";
 "bug_tracker" = "Баг-трекер";
 
+"mobile_friends" = "Друзья";
+"mobile_photos" = "Фотографии";
+"mobile_videos" = "Видеозаписи";
+"mobile_messages" = "Сообщения";
+"mobile_notes" = "Заметки";
+"mobile_groups" = "Группы";
+"mobile_search" = "Поиск";
+
+"menu_settings" = "Настройки";
 "menu_login" = "Вход";
 "menu_registration" = "Регистрация";
 "menu_help" = "Помощь";
 "menu_logout" = "Выйти";
+"menu_desktop_version" = "Полная версия";
 "menu_support" = "Поддержка";
 
 "header_home" = "главная";
