--- a/locales/by_lat.strings
+++ b/locales/by_lat.strings
@@ -312,7 +312,7 @@
 "search_for_comments" = "Pošuk kamentaryjaŭ";
 "search_for_videos" = "Šukać videa";
 "search_for_apps" = "Šukać prahramy";
-"search_for_notes" = "Шукаць нататкі";
+"search_for_notes" = "Šukać natatki";
 "search_button" = "Znajści";
 
 "privacy_setting_access_page" = "Kamu ŭ interniecie vidać maju staronku";
